# torch-gated-attention

./: .gitignore  LICENSE  README.md  pyproject.toml
gated_attention/: __init__.py  core.py  layers.py
