[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torch-gated-attention"
version = "0.1.0"
description = "Architecture-agnostic implementation of Gated Attention for LLMs (Qiu et al. (2025))"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Navdeep Singh Jakhar", email = "navdeepjakhar30@gmail.com" }
]
keywords = ["pytorch", "attention", "llm", "deep-learning", "gated-attention"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
]

[project.urls]
"Homepage" = "https://github.com/navjak/torch-gated-attention"
"Bug Tracker" = "https://github.com/navjak/torch-gated-attention/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["gated_attention*"]